A little lua scripts refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://ivanandrosovv.ru:5432/reactor_control
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8080
